src/test/ui/macros/macro_path_as_generic_bound.stderr
error[E0433]: failed to resolve. Use of undeclared type or module `m`
  --> $DIR/macro_path_as_generic_bound.rs:17:6
   |
LL | foo!(m::m2::A); //~ ERROR failed to resolve
   |      ^ Use of undeclared type or module `m`

error: cannot continue compilation due to previous error

If you want more information on this error, try using "rustc --explain E0433"
